--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,14 @@
 {
     "presets": [
-        "@babel/preset-env",
-        "@babel/preset-react"
+        "@babel/preset-react",
+        "@babel/preset-env"
     ],
     "plugins": [
         "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-proposal-object-rest-spread",
-        "@babel/plugin-transform-modules-commonjs"
-    ],
+        "@babel/plugin-proposal-object-rest-spread"//,
+        // "@babel/plugin-transform-modules-commonjs"
+    ]/*,
     "test": [
         "jest"
-    ]
+    ]*/
 }
