--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
-    "dev-server": "webpack-dev-server",
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --mode production",
+    "dev-server": "webpack-dev-server --mode development",
     "test": "jest --config=jest.config.json"
   },
   "dependencies": {
@@ -25,6 +26,8 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
+    "live-server": "^1.2.2",
+    "mini-css-extract-plugin": "^2.6.0",
     "moment": "2.18.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
