--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
     "dev-server": "webpack-dev-server --mode development",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "@babel/cli": "^7.17.10",
@@ -26,6 +28,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
+    "express": "^4.18.1",
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.6.0",
     "moment": "2.18.1",
