--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^6.7.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2",
     "express": "^4.18.1",
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.6.0",
@@ -46,11 +43,14 @@
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "uuid": "^8.3.2",
-    "webpack": "^5.72.1",
-    "webpack-dev-server": "^4.9.1"
+    "webpack": "^5.72.1"
   },
   "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "jest": "^28.1.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.1"
   }
 }
