--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "2.18.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "raf": "^3.4.1",
     "react": "^18.1.0",
     "react-addons-shallow-compare": "15.6.0",
