--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
     "dev-server": "webpack-dev-server --mode development",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -26,6 +26,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^6.7.1",
     "express": "^4.18.1",
+    "firebase": "8.4.2",
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.6.0",
     "moment": "2.18.1",
@@ -41,12 +42,15 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "5.3.3",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "uuid": "^8.3.2",
     "webpack": "^5.72.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
