--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^6.7.1",
     "express": "^4.18.1",
     "firebase": "8.4.2",
+    "history": "4.10.1",
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.6.0",
     "moment": "2.18.1",
